--- a/alexandria/app/src/main/res/values/strings.xml
+++ b/alexandria/app/src/main/res/values/strings.xml
@@ -29,5 +29,6 @@
     <string name="about_text">This application gets book information from a Google API. All titles, cover images, and author information come from there.
     The original version of this app was built by Sascha Jaschke, and a modified version is given to students in the Udacity Android Nanodegree program. </string>
     <string name="title_activity_scanner">Scanner</string>
+    <string name="error_network_unavailable">Network is not available</string>
     <string name="error_wrong_barcode_format">Wrong ISBN format, try again</string>
 </resources>
