--- a/FootballScores/app/src/main/res/values/strings.xml
+++ b/FootballScores/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">>
 
     <!--Application-->
     <string name="app_name">Football Scores</string>
@@ -22,13 +22,24 @@
     <string name="league_unknown">Unknown league</string>
 
     <!--Match Details Fragment-->
-    <string name="match_day_text">Match day</string>
-    <string name="group_stage_text">Group stages</string>
+    <string name="match_day_text">Match Day <xliff:g id="match_day" example="2">%1$s</xliff:g></string>
+    <string name="group_stage_text">Group stages, Match Day <xliff:g id="match_day" example="2">%1$s</xliff:g></string>
     <string name="first_knockout_round">First knockout round</string>
     <string name="quarter_final">Quarter Final</string>
     <string name="semi_final">Semi Final</string>
     <string name="final_text">Final</string>
     <string name="share_text">Share</string>
+
+    <!--Content descriptions-->
+    <string name="a11y_home_name">Home team name: <xliff:g id="home_name" example="Arsenal FC">%1$s</xliff:g></string>
+    <string name="a11y_away_name">Away team name: <xliff:g id="away_name" example="Manchester City FC">%1$s</xliff:g></string>
+    <string name="a11y_home_crest"> <xliff:g id="home_crest" example="Arsenal FC">%1$s</xliff:g>\'s team crest</string>
+    <string name="a11y_away_crest"> <xliff:g id="away_crest" example="Manchester City FC">%1$s</xliff:g>\'s team crest</string>
+    <string name="a11y_match_date">Match date: <xliff:g id="match_date">%1$s</xliff:g></string>
+    <string name="a11y_match_score">Match score: Home-Away <xliff:g id="match_score">%1$s</xliff:g></string>
+    <string name="a11y_match_day">Match day: <xliff:g id="match_day">%1$s</xliff:g></string>
+    <string name="a11y_league_name">League name: <xliff:g id="league_name">%1$s</xliff:g></string>
+    <string name="a11y_share_button">Share button</string>
 
     <!--Widget-->
     <string name="widget_text">This is a widget probably.</string>
