--- a/FootballScores/app/src/main/res/values/strings.xml
+++ b/FootballScores/app/src/main/res/values/strings.xml
@@ -42,7 +42,8 @@
     <string name="a11y_share_button">Share button</string>
 
     <!--Widget-->
-    <string name="widget_text">This is a widget probably.</string>
+    <string name="appwidget_text">EXAMPLE</string>
+    <string name="add_widget">Add widget</string>
 
     <!--About-->
     <string name="about">About</string>
